Thu Nov  6 23:55:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_printable): QUOTE() should not raise an exception
	  even on invalid byte sequence.

Thu Nov  6 21:44:36 2014  Tanaka Akira  <akr@fsij.org>

	* test/test_unicode_normalize.rb: Rename TestNormalize to
	  TestUnicodeNormalize.
	  Define constants under TestUnicodeNormalize.

Thu Nov  6 21:22:59 2014  Tanaka Akira  <akr@fsij.org>

	* test/open-uri/test_open-uri.rb: Check empty webrick log.

Thu Nov  6 19:27:34 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (unescape_nonascii): cast -1 for the case char is unsigned char.
	  If char is signed char, for example gcc for ARM or ppc64, it caused
	  infinite loop.
	  http://kmuto.jp/build-ruby/arm/ruby-trunk/log/20141106T013005Z.fail.html.gz
	  http://rubyci.blob.core.windows.net/f19p8/ruby-trunk/log/20141106T090217Z.fail.html.gz

Thu Nov  6 09:53:18 2014  Eric Wong  <e@80x24.org>

	* lib/uri/rfc2396_parser.rb (initialize): reduce bytecode size
	  2088 => 1332 bytes on 32-bit x86

Thu Nov  6 08:49:49 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: Comment clarification.

Wed Nov  5 23:43:24 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* compile.c (compile_data_alloc): add padding when strict alignment
	  is required for memory access. Currently, the padding is enabled
	  only when the CPU is 32-bit SPARC and the compiler is GCC.
	  [Bug #9681] [ruby-core:61715]

	* compile.c (STRICT_ALIGNMENT): defined if strict alignment is required

	* compile.c (ALIGNMENT_SIZE, ALIGNMENT_SIZE_MASK, PADDING_SIZE_MAX):
	  new macros for alignment word size, bit mask, max size of padding.

	* compile.c (calc_padding): new function to calculate padding size.

Wed Nov  5 23:24:45 2014  Tanaka Akira  <akr@fsij.org>

	* test/open-uri/test_open-uri.rb: Don't ignore webrick's log.

Wed Nov  5 19:20:08 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Stop listener loop properly.